20 September 2011: Wouter
	- Fix classification of NS set in answer section, where there is a
	  parent-child server, and the answer has the AA flag for dir.slb.com.
	  Thanks to Amanda Constant from Secure64.

16 September 2011: Wouter
	- fix bug #408: accept patch from Steve Snyder that comments out
	  unused functions in lookup3.c.
	- iana portlist updated.
	- fix EDNS1480 change memleak and TCP fallback.
	- fix various compiler warnings (reported by Paul Wouters).
	- max sent count.  EDNS1480 only for rtt < 5000.  No promiscuous
	  fetch if sentcount > 3, stop query if sentcount > 16.  Count is
	  reset when referral or CNAME happens.  This makes unbound better
	  at managing large NS sets, they are explored when there is continued
	  interest (in the form of queries).

15 September 2011: Wouter
	- release 1.4.13.
	- trunk contains 1.4.14 in development.
	- Unbound probes at EDNS1480 if there an EDNS0 timeout.

12 September 2011: Wouter
	- Reverted dns EDNS backoff fix, it did not help and needs
	  fragmentation fixes instead.
	- tag 1.4.13rc2

7 September 2011: Wouter
	- Fix operation in ipv6 only (do-ip4: no) mode.

6 September 2011: Wouter
	- fedora specfile updated.

5 September 2011: Wouter
	- tag 1.4.13rc1

2 September 2011: Wouter
	- iana portlist updated.

26 August 2011: Wouter
	- Fix num-threads 0 does not segfault, reported by Simon Deziel.
	- Fix validation failures due to EDNS backoff retries, the retry
	  for fetch of data has want_dnssec because the iter_indicate_dnssec
	  function returns true when validation failure retry happens, and
	  then the serviced query code does not fallback to noEDNS, even if
	  the cache says it has this.  This helps for DLV deployment when
	  the DNSSEC status is not known for sure before the lookup concludes.

24 August 2011: Wouter
	- Applied patch from Karel Slany that fixes a memory leak in the
	  unbound python module, in string conversions.

22 August 2011: Wouter